qtmux: Don't unconditionally use strnlen()

It's not available on older OSX and we can as well use memchr() here.

https://bugzilla.gnome.org/show_bug.cgi?id=756154